Creación Usuarios como Entidad, el repositorio, los servicios y el controlador

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_admin_rol
+spring.datasource.url=jdbc:postgresql://localhost:5432/tecnosoftDB
 spring.datasource.username=postgres
 spring.datasource.password=123456789
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.thymeleaf.mode=LEGACYHTML5
