--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.thymeleaf.mode=LEGACYHTML5
+#spring.main.allow-circular-references = true
