--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,12 @@
             <artifactId>bootstrap</artifactId>
             <version>4.0.0-2</version>
         </dependency>
-
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
